refactor: leave room